--- a/views/landing.pug
+++ b/views/landing.pug
@@ -1,19 +1,19 @@
-extends layouts
-
-block content
-    h1= title
-    p welcome to #{title}
-    form(action="/",method="POST")
-        input(name="lead_email", type="email", placeholder="Enter your email")
-        button(type="submit") Submit
-    if leads
-        h1 Leads
-        for lead in leads
-            p(id=lead.id) 
-                span #{lead.email}
-                |
-                a(href="/lead/"+ lead.id) Details
-                |
-                button(onclick=`deleteLead('${lead.id}')`) Delete
-    script(src='https://code.jquery.com/jquery-3.2.1.min.js')
-    script(src="/javascript/leads.js") 
+doctype html
+html(lang='en')
+  include common/head.pug
+  +head("Starter MVP")
+  body
+    header
+      include common/navbar.pug
+      +navbar(user)
+      .container
+        .row.align-items-center
+          .col-md-6.order-md-1.text-center.text-md-left.pr-md-5
+            p.lead.m-4 Get Start.
+            form(action="/", method="POST")
+              .input-group.mb-3
+                input(name="lead_email", type="email", placeholder="Enter your email address").form-control
+                .input-group-append
+                  button(type="submit").btn.btn-primary Get Started
+    include common/footer.pug
+    +footer()
